# bank-to-actualbudget

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
src/bank_to_actualbudget/: cli.py  log.py  main.py
src/bank_to_actualbudget/file_io/: base.py  csv.py
src/bank_to_actualbudget/revolut/: processor.py  schemas.py
tests/: test_cli.py  test_log.py
tests/file_io/: test_base.py  test_csv.py
